--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-edit-text": "^5.0.2",
+    "react-editext": "^4.2.1",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
