--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^0.40.2",
     "react-bootstrap": "^2.4.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.0.2",
     "react-editext": "^4.2.1",
